Fixed message component text wrapping issue

--- a/sites/eleventy/src/_includes/components/global/messages/_messages.scss
+++ b/sites/eleventy/src/_includes/components/global/messages/_messages.scss
@@ -36,10 +36,6 @@
       margin-right: -0.75rem;
     }
 
-  a {
-    white-space: nowrap;
-  }
-
   // 'Info' type message
   &--info {
     --message-text: var(--black);
